Bug 731597: backout lzma support until avmshell build issues are resolved (r=fklockii).